[gd_scene load_steps=6 format=3 uid="uid://dhda8lqqc5002"]

[ext_resource type="Script" path="res://Levels/level.gd" id="1_07ib8"]
[ext_resource type="Script" path="res://Levels/color_rect_test.gd" id="2_ijxfe"]
[ext_resource type="PackedScene" uid="uid://bviilad5imam6" path="res://objects/hangar.tscn" id="2_ysakb"]
[ext_resource type="Script" path="res://Levels/object_generator.gd" id="4_jsxh1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s31d0"]
size = Vector2(788, 464)

[node name="LevelContainer" type="Node2D"]
script = ExtResource("1_07ib8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 645.0
script = ExtResource("2_ijxfe")

[node name="Hangar" parent="." instance=ExtResource("2_ysakb")]
position = Vector2(9, 158)

[node name="ObjectGenerator" type="Area2D" parent="."]
position = Vector2(758, 254)
script = ExtResource("4_jsxh1")
tree_count = 2
soldier_count = 2

[node name="Bounds" type="CollisionShape2D" parent="ObjectGenerator"]
position = Vector2(0, -22)
shape = SubResource("RectangleShape2D_s31d0")
debug_color = Color(0, 0.701961, 0.313726, 0.419608)

[node name="TankMarker" type="Marker2D" parent="."]
position = Vector2(576, 569)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
process_mode = 4
position = Vector2(576, 324.5)
scale = Vector2(57.5, 32.25)

[connection signal="soldier_dropped" from="Hangar" to="." method="_on_hangar_soldier_dropped"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
